--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Extension GPE",
   "version": "1.0",
-  "permissions": ["storage", "http://server.gpeclub.com:3000/"],
+  "permissions": ["storage", "https://server.gpeclub.com:1000/"],
   "background": {
     "service_worker": "background.js"
   },
