--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Extension GPE",
-  "version": "1.0",
+  "version": "1.1",
   "permissions": ["storage", "https://server.gpeclub.com:1000/"],
   "background": {
     "service_worker": "background.js"
@@ -13,7 +13,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["marked.min.js", "content.js"],
+      "css": ["gpe-style.css"]
     }
   ],
   "web_accessible_resources": [{
